--- a/config/elasticsearch.yml
+++ b/config/elasticsearch.yml
@@ -275,8 +275,10 @@ index:
         type: custom
         tokenizer: path_hierarchy
 
-#index.analysis.analyzer.default.type: mmseg
-index.analysis.analyzer.default.type: keyword
+index.analysis.analyzer.default.type: mmseg
+# index.analysis.analyzer.default.type: keyword
 
 # rtf.filter.redis.host: 127.0.0.1
 # rtf.filter.redis.port: 6379
+
+network.host: _site_
