--- a/config/elasticsearch.yml
+++ b/config/elasticsearch.yml
@@ -277,6 +277,7 @@ index:
 
 index.analysis.analyzer.default.type: mmseg
 # index.analysis.analyzer.default.type: keyword
+index.query.bool.max_clause_count: 102400
 
 # rtf.filter.redis.host: 127.0.0.1
 # rtf.filter.redis.port: 6379
